@@ -16,6 +16,7 @@ meep::structure *make_structure(int dims, vector3 size, vector3 center,
 				ctlio::geometric_object_list geometry,
 				ctlio::material_type_list extra_materials,
 				ctlio::material_type default_mat,
+				const char *eps_input_file,
 				ctlio::pml_list pml_layers,
 				ctlio::symmetry_list symmetries,
 				int num_chunks, double Courant,
